--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,274 @@
 /* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/primeng.css";
+
+@import "../src/icons.scss";
+
+:host {
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+body {
+  margin: 0px;
+  height: 100vh;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
+}
+
+.card-bg-1 {
+  --s: 150px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --_g: #0000 8%, var(--c1) 0 17%, #0000 0 58%;
+  background: linear-gradient(135deg, #0000 20.5%, var(--c1) 0 29.5%, #0000 0) 0
+      calc(var(--s) / 4),
+    linear-gradient(45deg, var(--_g)) calc(var(--s) / 2) 0,
+    linear-gradient(135deg, var(--_g), var(--c1) 0 67%, #0000 0),
+    linear-gradient(
+      45deg,
+      var(--_g),
+      var(--c1) 0 67%,
+      #0000 0 83%,
+      var(--c1) 0 92%,
+      #0000 0
+    ),
+    var(--c2);
+  background-size: var(--s) var(--s);
+}
+
+.card-bg-2 {
+  --s: 100px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --_g: var(--c1) 90deg, #0000 90.5deg;
+  background: conic-gradient(from -45deg, var(--_g)),
+    conic-gradient(from 135deg, var(--_g)) calc(var(--s) / 2) 0, var(--c2);
+  background-size: var(--s) var(--s);
+}
+
+.card-bg-3 {
+  --s: 120px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --_g: 80%, var(--c1) 25.4%, #0000 26%;
+  background: radial-gradient(at 80% var(--_g)),
+    radial-gradient(at 20% var(--_g)),
+    conic-gradient(from -45deg at 50% 41%, var(--c1) 90deg, var(--c2) 0)
+      calc(var(--s) / 2) 0;
+  background-size: var(--s) var(--s);
+}
+
+.card-bg-4 {
+  --s: 100px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --_g: #0000 90deg, var(--c1) 0;
+  background: conic-gradient(from 90deg at 2px 2px, var(--_g)),
+    conic-gradient(from 90deg at 1px 1px, var(--_g)), var(--c2);
+  background-size: var(--s) var(--s), calc(var(--s) / 5) calc(var(--s) / 5);
+}
+
+.card-bg-5 {
+  --s: 100px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --_g1: var(--c1) calc(25% / 3), #0000 0 calc(50% / 3), var(--c1) 0 25%,
+    #0000 0 75%, var(--c1) 0 calc(250% / 3), #0000 0 calc(275% / 3), var(--c1) 0;
+  --_g2: #0000 calc(25% / 3), var(--c1) 0 calc(50% / 3), #0000 0 calc(250% / 3),
+    var(--c1) 0 calc(275% / 3), #0000 0;
+  background: linear-gradient(45deg, var(--_g2)),
+    linear-gradient(45deg, var(--_g1)), linear-gradient(-45deg, var(--_g2)),
+    linear-gradient(-45deg, var(--_g1)) var(--c2); /* second color */
+  background-position: 0 0, var(--s) var(--s);
+  background-size: calc(2 * var(--s)) calc(2 * var(--s));
+}
+
+.card-bg-6 {
+  --s: 60px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --_g: #0000 83%, var(--c1) 85% 99%, #0000 101%;
+  background: radial-gradient(27% 29% at right, var(--_g)) calc(var(--s) / 2)
+      var(--s),
+    radial-gradient(27% 29% at left, var(--_g)) calc(var(--s) / -2) var(--s),
+    radial-gradient(29% 27% at top, var(--_g)) 0 calc(var(--s) / 2),
+    radial-gradient(29% 27% at bottom, var(--_g)) 0 calc(var(--s) / -2)
+      var(--c2);
+  background-size: calc(2 * var(--s)) calc(2 * var(--s));
+}
+
+.card-bg-7 {
+  --s: 150px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --_g: var(--c1) 6.1%, var(--c2) 6.4% 18.6%, var(--c1) 18.9% 31.1%,
+    var(--c2) 31.4% 43.6%, var(--c1) 43.9% 56.1%, var(--c2) 56.4% 68.6%,
+    #0000 68.9%;
+  background: radial-gradient(var(--s) at 100% 0, var(--_g)),
+    radial-gradient(var(--s) at 0 0, var(--_g)),
+    radial-gradient(var(--s) at 0 100%, var(--_g)),
+    radial-gradient(var(--s) at 100% 100%, var(--_g)) var(--c1);
+  background-size: var(--s) var(--s);
+}
+
+.card-bg-8 {
+  --s: 100px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --_g: var(--c1) 0 100%, #0000 102%;
+  background: conic-gradient(#0000 75%, var(--_g)) calc(var(--s) / 4)
+      calc(var(--s) / 4),
+    radial-gradient(65% 65% at 50% -50%, var(--_g)),
+    radial-gradient(65% 65% at -50% 50%, var(--_g)),
+    radial-gradient(65% 65% at 50% 150%, var(--_g)),
+    radial-gradient(65% 65% at 150% 50%, var(--_g)) var(--c2);
+  background-size: var(--s) var(--s);
+}
+
+.card-bg-9 {
+  --s: 50px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --t: calc(var(--s) / 10); /* control the thickness */
+  --_c: #0000 calc(98% - var(--t)), var(--c1) calc(100% - var(--t)) 98%, #0000;
+  --_s: calc(2 * var(--s)) calc(5 * var(--s) / 2);
+  --_r0: /var(--_s) radial-gradient(calc(var(--s) / 2) at 0 20%, var(--_c));
+  --_r1: /var(--_s) radial-gradient(calc(var(--s) / 2) at 100% 20%, var(--_c));
+  background: 0 0 var(--_r0),
+    calc(-1 * var(--s)) calc(5 * var(--s) / 4) var(--_r0), var(--s) 0 var(--_r1),
+    0 calc(5 * var(--s) / 4) var(--_r1),
+    conic-gradient(at var(--t) calc(20% + 2 * var(--t)), #0000 75%, var(--c1) 0)
+      calc(var(--t) / -2) calc(var(--s) - var(--t)) / var(--s)
+      calc(5 * var(--s) / 4),
+    repeating-conic-gradient(var(--c2) 0 25%, #0000 0 50%) var(--s)
+      calc(var(--s) / -8) / var(--_s),
+    conic-gradient(from 90deg at var(--t) var(--t), var(--c2) 25%, var(--c1) 0)
+      calc((var(--s) - var(--t)) / 2) calc((var(--s) - var(--t)) / 2) / var(--s)
+      calc(5 * var(--s) / 4);
+}
+
+.card-bg-10 {
+  --s: 60px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --_c: var(--c1) calc(100% - var(--s) / 2) 99%, #0000;
+  --_g: var(--s), #0000 calc(99% - var(--s) / 2), var(--_c);
+  background: radial-gradient(var(--s) at 100% var(--_g)),
+    radial-gradient(calc(var(--s) / 4) at 50% calc(100% / 3), var(--_c))
+      var(--s) 0,
+    radial-gradient(var(--s) at 0% var(--_g)) 0 calc(3 * var(--s)) var(--c2);
+  background-size: calc(2 * var(--s)) calc(9 * var(--s) / 4),
+    calc(2 * var(--s)) calc(3 * var(--s) / 4);
+}
+
+.card-bg-11 {
+  --s: 100px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --c: var(--c2) 20% 30%;
+  background: linear-gradient(135deg, #0000 20%, var(--c), #0000 0),
+    repeating-linear-gradient(45deg, var(--c), var(--c1) 0 70%);
+  background-size: var(--s) var(--s);
+}
+
+.card-bg-12 {
+  --s: 90px; /* control the size*/
+  --c1: var(--complimentary-color-b);
+  --c2: var(--surface-card);
+
+  --g: #0000 calc(125% / 3), var(--c1) 0 calc(175% / 3), #0000 0;
+  --p: calc(var(--s) / 2) calc(var(--s) / 2) / calc(2 * var(--s))
+    calc(2 * var(--s));
+  background: radial-gradient(var(--c1) 34%, #0000 36%) 0 0 / var(--s) var(--s),
+    linear-gradient(45deg, var(--g)) var(--p),
+    linear-gradient(-45deg, var(--g)) var(--p) var(--c2);
+}
+
+.icon-12 {
+  width: 12px;
+  height: 12px;
+}
+
+.icon-14 {
+  width: 14px;
+  height: 14px;
+}
+
+.icon-16 {
+  width: 16px;
+  height: 16px;
+}
+
+.icon-18 {
+  width: 18px;
+  height: 18px;
+}
+
+.icon-20 {
+  width: 20px;
+  height: 20px;
+}
+
+.icon-22 {
+  width: 22px;
+  height: 22px;
+}
+.icon-24 {
+  width: 24px;
+  height: 24px;
+}
+.icon-26 {
+  width: 26px;
+  height: 26px;
+}
+.icon-36 {
+  width: 36px;
+  height: 36px;
+}
+
+html {
+  //   @extend .card-bg-12;
+  background-color: var(--surface-ground);
+  //   filter: blur(1.5rem);
+  font-size: 14px;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 0.8rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar-bg);
+  border-radius: var(--border-radius);
+  // transition: all 200ms;
+  &:hover {
+    background-color: var(--scrollbar-hover-bg);
+  }
+  &:active {
+    background-color: var(--primary-color);
+  }
+}
