--- a/src/app/components/ui/menubar/menubar.component.html
+++ b/src/app/components/ui/menubar/menubar.component.html
@@ -136,7 +136,7 @@
     <div class="restore-button" pRipple (click)="toggleRestoreApp()">
       <span
         [class]="
-          isMaximized()
+          maximized()
             ? 'fluent--square-multiple-16-regular'
             : 'fluent--maximize-16-regular'
         "
