output header fix

--- a/src/app/components/ui/output-actions/output-actions.component.html
+++ b/src/app/components/ui/output-actions/output-actions.component.html
@@ -54,7 +54,7 @@
   </p-button>
 
   <span class="preview-header">
-    <b> Output </b>
+    <span> Output </span>
   </span>
   <pre class="preview-content">{{ output() }}</pre>
 </div>
