--- a/src/app/components/ui/output-actions/output-actions.component.scss
+++ b/src/app/components/ui/output-actions/output-actions.component.scss
@@ -30,6 +30,8 @@
 
 .preview-header {
   position: absolute;
+  font-size: small;
+  font-weight: 500;
   top: 0.5rem;
   left: 1rem;
   color: var(--text-color-secondary);
