--- a/src/app/components/ui/menubar/menubar.component.html
+++ b/src/app/components/ui/menubar/menubar.component.html
@@ -8,11 +8,11 @@
   @if (notePreviewWindowMode()) {
   <div class="left-container" id="tauri-drag">
     <!-- REMOVED FEATURE BECAUSE BUGGY -->
-    <!-- @if (!windowBlured()) {
+    @if (!windowBlured()) {
         <div class="add-note-button" pRipple (click)="addNote()">
           <span class="fluent--add-16-regular"></span>
         </div>
-      } -->
+      }
   </div>
 
   } @else {
