--- a/src/app/views/addons/notes/notes.component.html
+++ b/src/app/views/addons/notes/notes.component.html
@@ -24,7 +24,7 @@
   >
   </p-button>
 
-  <div class="searchbar-container"></div>
+  <!-- <div class="searchbar-container"></div> -->
 
   @if (notes().length > 0) {
   <div class="notes-container">
