--- a/src/app/views/addons/textfiltr/textfiltr.component.html
+++ b/src/app/views/addons/textfiltr/textfiltr.component.html
@@ -17,7 +17,7 @@
     </span>
 
     <textarea
-      ncInputContext
+    ncInputContextmenu
       autocomplete="off"
       id="float-input"
       [formControl]="inputFormControl"
