--- a/src/app/components/ui/template-edit-dialog/template-edit-dialog.component.html
+++ b/src/app/components/ui/template-edit-dialog/template-edit-dialog.component.html
@@ -4,7 +4,7 @@
         <input
           type="text"
           id="title"
-          ncInputContext
+          ncInputContextmenu
           pInputText
           [formControl]="titleFormControl"
         />
