fix editor template bug

--- a/src/app/components/ui/template-edit-dialog/template-edit-dialog.component.html
+++ b/src/app/components/ui/template-edit-dialog/template-edit-dialog.component.html
@@ -4,6 +4,7 @@
         <input
           type="text"
           id="title"
+          autocomplete="off"
           ncInputContextmenu
           pInputText
           [formControl]="titleFormControl"
